--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "version": 2,
   "functions": {
     "api/*.js": {
-      "runtime": "nodejs18.x"
+      "runtime": "nodejs20.x",
+      "memory": 128,
+      "maxDuration": 10
     }
   }
 }
